# ink-automated-market-maker

./: .rustfmt.toml  LICENSE  README.md
.github/workflows/: rust.yml
automated_market_maker/: Cargo.toml  lib.rs
automated_market_maker/tests/: tests.rs
resources/: dex.excalidraw
user-interface/: helloworld.html
