[package]
name = "automated_market_maker"
version = "0.1.0"
authors = ["Tomasz Waszczyk <tomasz@waszczyk.com>"]
edition = "2021"

[dependencies]
ink = { version = "4.0.2", default-features = false }
ink_primitives = { version = "4.0.2", default-features = false }
ink_prelude = { version = "4.0.2", default-features = false }

scale = { package = "parity-scale-codec", version = "3.5.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.7.0", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
