[package]
name = "automated_market_maker"
version = "0.1.0"
authors = ["Tomasz Waszczyk <tomasz@waszczyk.com>"]
edition = "2021"

[dependencies]
ink = { version = "=5.0.0", default-features = false }
ink_primitives = { version = "=5.0.0", default-features = false }
ink_metadata = { version = "=5.0.0", default-features = false, features = ["derive"], optional = true }
ink_prelude = { version = "=5.0.0", default-features = false }
ink_env = { version = "=5.0.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.1", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = "5.0.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "ink_env/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_primitives/std",
]
ink-as-dependency = []
e2e-tests = []
